app/gke/log4shell-scanner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: log4shell-scanner
  name: log4shell-scanner
  namespace: scanners
spec:
  selector:
    matchLabels:
      app: log4shell-scanner
  strategy: {}
  template:
    metadata:
      labels:
        app: log4shell-scanner
    spec:
      containers:
        - name: log4shell-scanner
          image: gcr.io/track-compliance/log4shell-scanner:master-0dd5035-1684843927 # {"$imagepolicy": "flux-system:log4shell-scanner"}
          imagePullPolicy: Always
          resources: {}
status: {}
