app/gke/spring4shell-scanner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring4shell-scanner
  name: spring4shell-scanner
  namespace: scanners
spec:
  replicas: 4
  selector:
    matchLabels:
      app: spring4shell-scanner
  strategy: {}
  template:
    metadata:
      labels:
        app: spring4shell-scanner
    spec:
      containers:
        - name: spring4shell-scanner
          image: gcr.io/track-compliance/spring4shell-scanner:master-38a613d-1689346472 # {"$imagepolicy": "flux-system:spring4shell-scanner"}
          imagePullPolicy: Always
          resources: {}
status: {}
