app/gke/tracker-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: tracker-frontend
  name: tracker-frontend
  namespace: frontend
  annotations:
    fluxcd.io/automated: "true"
spec:
  selector:
    matchLabels:
      app: tracker-frontend
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
