app/gke/publicgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: publicgateway
  namespace: istio-system
  labels:
    istio: publicgateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      tls:
        httpsRedirect: true # ITPIN 6.1.1 redirected from HTTP
    - port:
        number: 443
        name: https
        protocol: HTTPS # ITPIN 6.1.1 is configured for HTTPS
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        credentialName: tracker-credential
        privateKey: sds
        serverCertificate: sds
        minProtocolVersion: TLSV1_2 # ITPIN 6.1.3 implements TLS 1.2, or subsequent versions
        cipherSuites: # ITPIN 6.1.3 uses supported cryptographic algorithms
        - TLS_AES_128_GCM_SHA256
        - TLS_AES_256_GCM_SHA384
        - TLS_CHACHA20_POLY1305_SHA256
        - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
        - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
        - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
